tests/init/neg/t3273.check
-- Error: tests/init/neg/t3273.scala:4:42 ------------------------------------------------------------------------------
4 |  val num1: LazyList[Int] = 1 #:: num1.map(_ + 1)                        // error
  |                                  ^^^^^^^^^^^^^^^
  |    Cannot prove the argument is fully initialized. Only fully initialized values are safe to leak. Calling trace:
  |    -> object Test {	[ t3273.scala:3 ]
  |       ^
  |    -> val num1: LazyList[Int] = 1 #:: num1.map(_ + 1)                        // error	[ t3273.scala:4 ]
  |                                       ^^^^^^^^^^^^^^^
  |
  |    Promoting the value to fully initialized failed due to the following problem:
  |    Access non-initialized value num1.
-- Error: tests/init/neg/t3273.scala:5:61 ------------------------------------------------------------------------------
5 |  val num2: LazyList[Int] = 1 #:: num2.iterator.map(_ + 1).to(LazyList)  // error
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |    Cannot prove the argument is fully initialized. Only fully initialized values are safe to leak. Calling trace:
  |    -> object Test {	[ t3273.scala:3 ]
  |       ^
  |    -> val num2: LazyList[Int] = 1 #:: num2.iterator.map(_ + 1).to(LazyList)  // error	[ t3273.scala:5 ]
  |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  |    Promoting the value to fully initialized failed due to the following problem:
  |    Access non-initialized value num2.
